Bug 592157 - Links on Safe Browsing blocked site overlay aren't visibly differentiated if user has 'Underline links' off. r=ardissone, sr=smorgan

--- a/embed-replacements/skin/classic/global/netError.css
+++ b/embed-replacements/skin/classic/global/netError.css
@@ -148,8 +148,7 @@ body[dir="rtl"] #brand {
 
 /* Custom styling for 'blacklist' error class - bug 380932  */
 :root.blacklist #errorTitle, :root.blacklist #errorLongContent,
-:root.blacklist #errorShortDesc, :root.blacklist #errorLongDesc,
-:root.blacklist a {
+:root.blacklist #errorShortDesc, :root.blacklist #errorLongDesc {
   background-color: #e8e8e8;
   color: black;
 }
